# RentAll/RentAll.Domain/Models/Report.cs
@@ -6,7 +6,7 @@ using System.Threading.Tasks;
 
 namespace RentAll.Domain.Models
 {
-   public class Report
+    public class Report
     {
 
         public double LeasableArea { get; set; }
@@ -14,5 +14,10 @@ namespace RentAll.Domain.Models
         public double OccupancyDegree { get; set; }
         public double AverageRent { get; set; }
         public double TotalRentIncome { get; set; }
+
+        public double TotalRentIncomeOnNonFood { get; set; }
+        public double TotalRentIncomeOnFood { get; set; }
+        public double TotalRentIncomeOnEntertainment { get; set; }
+        public double TotalRentIncomeOnServices { get; set; }
     }
 }
